--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -8,6 +8,8 @@
 <link rel=stylesheet href=style.css>
 
 <dialog class=item-details>
+    <div class=item-info>
+    </div>
     <figure class=item-image aria-label="it's image">
         <img class=image-main src="images/preview_photo.png" alt="pink sweatshirt full-view">
         <div class=image-small></div>
