--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,6 +9,10 @@
 
 <dialog class=item-details>
     <div class=item-info>
+        <header class=category>
+            <h1 class=item-category>Activewear</h1>
+            <button class=close title="close details"></button>
+        </header>
     </div>
     <figure class=item-image aria-label="it's image">
         <img class=image-main src="images/preview_photo.png" alt="pink sweatshirt full-view">
