add main for item-info

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,6 +13,13 @@
             <h1 class=item-category>Activewear</h1>
             <button class=close title="close details"></button>
         </header>
+        <main class=main-info>
+            <h2 class=item-name>Pink Sweatshirt</h2>
+            <data class=item-code value=6K2882Z4>Product Code: 6K2882Z4 - 51S - D.Ocre</data>
+
+            <p class=item-price>$7,95</p>
+
+        </main>
     </div>
     <figure class=item-image aria-label="it's image">
         <img class=image-main src="images/preview_photo.png" alt="pink sweatshirt full-view">
