add form component

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -19,6 +19,17 @@
 
             <p class=item-price>$7,95</p>
 
+            <form action="" method=post>
+                <h3 class=item-size>size</h3>
+                <a href=# class=size-details>Learn more</a>
+
+                <h3 class=item-color>color</h3>
+
+                <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. %100 Polyester<br>
+                Length: Midi</p>
+
+                <button class=add-bag title="add to bag">add to bag</button>
+            </form>
         </main>
     </div>
     <figure class=item-image aria-label="it's image">
