add radio buttons for size select

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -22,6 +22,14 @@
             <form action="" method=post>
                 <h3 class=item-size>size</h3>
                 <a href=# class=size-details>Learn more</a>
+                <div class=select-size>
+	                <input class=size type=radio name=size value=xs>
+	                <input class=size type=radio name=size value=s>
+	                <input class=size type=radio name=size value=m checked>
+	                <input class=size type=radio name=size value=l>
+	                <input class=size type=radio name=size value=xl>
+	                <input class=size type=radio name=size value=xxl>
+                </div>
 
                 <h3 class=item-color>color</h3>
 
