add radio buttons for color select

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -32,6 +32,10 @@
                 </div>
 
                 <h3 class=item-color>color</h3>
+                <div class=select-color>
+                    <input class=color type=radio name=color value=D.Ocre checked>
+                    <input class=color type=radio name=color value=D.Grey>
+                </div>
 
                 <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. %100 Polyester<br>
                 Length: Midi</p>
