--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,12 +23,12 @@
                 <h3 class=item-size>size</h3>
                 <a href=# class=size-details>Learn more</a>
                 <div class=select-size>
-	                <input class=size type=radio name=size value=xs>
-	                <input class=size type=radio name=size value=s>
-	                <input class=size type=radio name=size value=m checked>
-	                <input class=size type=radio name=size value=l>
-	                <input class=size type=radio name=size value=xl>
-	                <input class=size type=radio name=size value=xxl>
+	                <label class=size><input type=radio name=size value=xs><span class=size-box>xs</span></label>
+	                <label class=size><input type=radio name=size value=s><span class=size-box>s</span></label>
+	                <label class=size><input type=radio name=size value=m checked><span class=size-box>m</span></label>
+	                <label class=size><input type=radio name=size value=l><span class=size-box>l</span></label>
+	                <label class=size><input type=radio name=size value=xl><span class=size-box>xl</span></label>
+	                <label class=size><input type=radio name=size value=xxl><span class=size-box>xxl</span></label>
                 </div>
 
                 <h3 class=item-color>color</h3>
