--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -33,8 +33,8 @@
 
                 <h3 class=item-color>color</h3>
                 <div class=select-color>
-                    <input class=color type=radio name=color value=D.Ocre checked>
-                    <input class=color type=radio name=color value=D.Grey>
+                    <label class=color><input type=radio name=color value=D.Ocre checked><span class=color-box></span></label>
+                    <label class=color><input type=radio name=color value=D.Grey><span class=color-box></span></label>
                 </div>
 
                 <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. %100 Polyester<br>
