--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -37,7 +37,7 @@
                     <label class=color><input type=radio name=color value=D.Grey><span class=color-box></span></label>
                 </div>
 
-                <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. %100 Polyester<br>
+                <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. Lining: %100 Polyester<br>
                 Length: Midi</p>
 
                 <button class=add-bag title="add to bag">add to bag</button>
