--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -42,7 +42,7 @@
     <input type=submit form=size value="add to bag" class=add-bag>
 
     <figure class=item-image aria-label="it's image">
-        <img class=image-main src="images/preview_photo.png" alt="pink sweatshirt full-view">
+        <img class=image-main src="/images/preview_photo.png" alt="pink sweatshirt full-view">
         <div class=image-small></div>
     </figure>   
 </dialog>
