add wrapper to avoid long list of selectors

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,31 +13,33 @@
         <button class=close title="close details"></button>
     </header>
 
-    <h2 class=item-name>Pink Sweatshirt</h2>
-    <data class=item-code value=6K2882Z4>Product Code: 6K2882Z4 - 51S - D.Ocre</data>
+    <div class=wrapper>
+        <h2 class=item-name>Pink Sweatshirt</h2>
+        <data class=item-code value=6K2882Z4>Product Code: 6K2882Z4 - 51S - D.Ocre</data>
 
-    <p class=item-price>$7,95</p>
+        <p class=item-price>$7,95</p>
 
-    <form action="" method=post id=size>
-        <h3 class=item-size>size</h3>
-        <a href=# class=size-details>Learn more</a>
-        <div class=select-size>
-            <label class=size><input type=radio name=size value=xs><span class=size-box>xs</span></label>
-            <label class=size><input type=radio name=size value=s><span class=size-box>s</span></label>
-            <label class=size><input type=radio name=size value=m checked><span class=size-box>m</span></label>
-            <label class=size><input type=radio name=size value=l><span class=size-box>l</span></label>
-            <label class=size><input type=radio name=size value=xl><span class=size-box>xl</span></label>
-            <label class=size><input type=radio name=size value=xxl><span class=size-box>xxl</span></label>
-        </div>
+        <form action="" method=post id=size>
+            <h3 class=item-size>size</h3>
+            <a href=# class=size-details>Learn more</a>
+            <div class=select-size>
+                <label class=size><input type=radio name=size value=xs><span class=size-box>xs</span></label>
+                <label class=size><input type=radio name=size value=s><span class=size-box>s</span></label>
+                <label class=size><input type=radio name=size value=m checked><span class=size-box>m</span></label>
+                <label class=size><input type=radio name=size value=l><span class=size-box>l</span></label>
+                <label class=size><input type=radio name=size value=xl><span class=size-box>xl</span></label>
+                <label class=size><input type=radio name=size value=xxl><span class=size-box>xxl</span></label>
+            </div>
 
-        <h3 class=item-color>color</h3>
-        <div class=select-color>
-            <label class=color><input type=radio name=color value=D.Ocre checked><span class=color-box></span></label>
-            <label class=color><input type=radio name=color value=D.Grey><span class=color-box></span></label>
-        </div>
+            <h3 class=item-color>color</h3>
+            <div class=select-color>
+                <label class=color><input type=radio name=color value=D.Ocre checked><span class=color-box></span></label>
+                <label class=color><input type=radio name=color value=D.Grey><span class=color-box></span></label>
+            </div>
 
-        <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. Lining: %100 Polyester<br>Length: Midi</p> 
-    </form>
+            <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. Lining: %100 Polyester<br>Length: Midi</p> 
+        </form>
+    </div>
 
     <input type=submit form=size value="add to bag" class=add-bag>
 
