--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,18 +23,18 @@
             <h3 class=item-size>size</h3>
             <a href=# class=size-details>Learn more</a>
             <div class=select-size>
-                <label><input type=radio name=size value=xs><span class=size>xs</span></label>
-                <label><input type=radio name=size value=s><span class=size>s</span></label>
-                <label><input type=radio name=size value=m checked><span class=size>m</span></label>
-                <label><input type=radio name=size value=l><span class=size>l</span></label>
-                <label><input type=radio name=size value=xl><span class=size>xl</span></label>
-                <label><input type=radio name=size value=xxl><span class=size>xxl</span></label>
+                <label><input type=radio name=size value=xs><div class=size>xs</div></label>
+                <label><input type=radio name=size value=s><div class=size>s</div></label>
+                <label><input type=radio name=size value=m checked><div class=size>m</div></label>
+                <label><input type=radio name=size value=l><div class=size>l</div></label>
+                <label><input type=radio name=size value=xl><div class=size>xl</div></label>
+                <label><input type=radio name=size value=xxl><div class=size>xxl</div></label>
             </div>
 
             <h3 class=item-color>color</h3>
             <div class=select-color>
-                <label class=color><input type=radio name=color value=D.Ocre checked><span class=color-box></span></label>
-                <label class=color><input type=radio name=color value=D.Grey><span class=color-box></span></label>
+                <label><input type=radio name=color value=D.Ocre checked><div class=color></div></label>
+                <label><input type=radio name=color value=D.Grey><div class=color></div></label>
             </div>
 
             <p class=item-description>Main Fabric: %91 Polyester %9 Polyamide. Lining: %100 Polyester<br>Length: Midi</p>
