--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,8 +9,8 @@
 
 <dialog class=item-details>
     <header class=category>
-        <h1 class=item-category>Activewear</h1>
-        <button class=close title="close details"></button>
+        <h1>Activewear</h1>
+        <button class=close title="Close dialog"></button>
     </header>
 
     <div class=wrapper>
