--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -19,7 +19,7 @@
 
         <p class=item-price>$7,95</p>
 
-        <form action="" method=post id=size>
+        <form action="" method=post id=options>
             <h3 class=item-size>size</h3>
             <a href=# class=size-details>Learn more</a>
             <div class=select-size>
@@ -41,7 +41,7 @@
         </form>
     </div>
 
-    <input type=submit form=size value="add to bag" class=add-bag>
+    <input type=submit form=options value="add to bag" class=add-bag>
 
     <figure class=item-image aria-label="it's image">
         <img class=image-main src="/images/preview_photo.png" alt="pink sweatshirt full-view">
