--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -19,7 +19,7 @@
 
         <p class=item-price>$7,95</p>
 
-        <form action="" method=post id=options>
+        <form method=post id=options>
             <h3 class=item-size>size</h3>
             <a href=# class=size-details>Learn more</a>
             <div class=select-size>
